[gd_scene load_steps=20 format=3 uid="uid://1hpb0hrtgxv"]

[ext_resource type="Script" uid="uid://bqr37mll4awmt" path="res://scripts/s_1.gd" id="1_q631x"]
[ext_resource type="Script" uid="uid://3gre0yewmhtr" path="res://scripts/rock.gd" id="2_3c855"]
[ext_resource type="Texture2D" uid="uid://cisndv6t1obs8" path="res://assets/rock.png" id="3_uutvs"]
[ext_resource type="Theme" uid="uid://c0es2kte6qmmp" path="res://scripts/normal.tres" id="3_yyhw1"]
[ext_resource type="Script" uid="uid://dg2yw3k74hrpy" path="res://scripts/coin_label.gd" id="5_gy76w"]
[ext_resource type="Texture2D" uid="uid://corhksc3axq45" path="res://assets/rockcoin.png" id="6_0thrn"]
[ext_resource type="Script" uid="uid://beky6a75cj5od" path="res://scripts/general_label.gd" id="6_gy76w"]
[ext_resource type="Script" uid="uid://yh7qb4w1gpbe" path="res://scripts/autoclick_button.gd" id="8_kky4p"]
[ext_resource type="Script" uid="uid://ky3pqqw5yu7p" path="res://scripts/time_label.gd" id="9_ny864"]
[ext_resource type="Script" uid="uid://c736wf7yu4jgo" path="res://scripts/cps_label.gd" id="9_q631x"]
[ext_resource type="Script" uid="uid://cletjw730xa57" path="res://scripts/autocps.gd" id="9_xysxj"]
[ext_resource type="Texture2D" uid="uid://dhd4jtxdr5hpo" path="res://assets/sprites/kuro/base/idle.png" id="10_uutvs"]
[ext_resource type="Script" uid="uid://q18gtl5tpb8f" path="res://scripts/sell_all_buttons.gd" id="13_nalor"]
[ext_resource type="Script" uid="uid://b2efnvfa7roo8" path="res://scripts/sell_10_buttons.gd" id="14_ok8w5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3c855"]
size = Vector2(14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpvoh"]
atlas = ExtResource("10_uutvs")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_at5dv"]
atlas = ExtResource("10_uutvs")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcd4p"]
atlas = ExtResource("10_uutvs")
region = Rect2(48, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_xysxj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpvoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at5dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcd4p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_q631x")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Rock" type="Area2D" parent="."]
position = Vector2(-315.99997, 0)
scale = Vector2(20, 20)
script = ExtResource("2_3c855")

[node name="Sprite2D" type="Sprite2D" parent="Rock"]
texture_filter = 1
texture = ExtResource("3_uutvs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock"]
shape = SubResource("RectangleShape2D_3c855")

[node name="GeneralLabel" type="Label" parent="."]
texture_filter = 1
offset_left = -116.0
offset_top = -216.0
offset_right = 135.0
offset_bottom = -164.0
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 30
script = ExtResource("6_gy76w")

[node name="TutorialLabel" type="Label" parent="."]
texture_filter = 1
offset_left = -124.0
offset_top = -289.0
offset_right = 547.0
offset_bottom = -237.0
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 40
text = "Click the asteroid to get stone!"

[node name="CoinDisplay" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="CoinDisplay"]
texture_filter = 1
offset_left = -568.0
offset_top = -317.0
offset_right = -528.0
offset_bottom = -277.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_0thrn")

[node name="CoinLabel" type="Label" parent="CoinDisplay"]
texture_filter = 1
offset_left = -505.0
offset_top = -317.0
offset_right = -388.0
offset_bottom = -256.0
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 50
script = ExtResource("5_gy76w")

[node name="AutoClick" type="Button" parent="."]
offset_left = 116.0
offset_top = 158.0
offset_right = 493.0
offset_bottom = 207.0
theme = ExtResource("3_yyhw1")
text = "Auto Mine (1 click/sec)"
script = ExtResource("8_kky4p")

[node name="CPSLAbel" type="Label" parent="."]
texture_filter = 1
offset_left = -567.0
offset_top = -199.0
offset_right = -413.0
offset_bottom = -148.0
theme = ExtResource("3_yyhw1")
script = ExtResource("9_q631x")

[node name="AutoCPS" type="Label" parent="."]
texture_filter = 1
offset_left = 124.0
offset_top = 217.0
offset_right = 393.0
offset_bottom = 260.0
theme = ExtResource("3_yyhw1")
script = ExtResource("9_xysxj")

[node name="KuroText" type="Label" parent="."]
texture_filter = 1
offset_left = -511.0
offset_top = 279.0
offset_right = -109.0
offset_bottom = 337.0
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 20
text = "<-- Kuro giving you emotional support"

[node name="TimeLabel" type="Label" parent="."]
offset_left = -564.0
offset_top = -251.0
offset_right = -466.0
offset_bottom = -193.0
theme = ExtResource("3_yyhw1")
script = ExtResource("9_ny864")

[node name="Kuro" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-546, 285)
scale = Vector2(3.645833, 3.645833)
sprite_frames = SubResource("SpriteFrames_xysxj")
autoplay = "default"

[node name="SellAllButtons" type="VBoxContainer" parent="."]
offset_left = 353.0
offset_top = -218.0
offset_right = 497.0
offset_bottom = 37.0
script = ExtResource("13_nalor")

[node name="SellAllRock" type="Button" parent="SellAllButtons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell all"

[node name="SellAllCopper" type="Button" parent="SellAllButtons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell all"

[node name="SellAllIron" type="Button" parent="SellAllButtons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell all"

[node name="SellAllGold" type="Button" parent="SellAllButtons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell all"

[node name="SellAllZinc" type="Button" parent="SellAllButtons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell all"

[node name="SellAllEmerald" type="Button" parent="SellAllButtons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell all"

[node name="SellAllLapis" type="Button" parent="SellAllButtons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell all"

[node name="Sell10Buttons" type="VBoxContainer" parent="."]
offset_left = 193.0
offset_top = -218.0
offset_right = 337.0
offset_bottom = 51.0
script = ExtResource("14_ok8w5")

[node name="Sell10Rock" type="Button" parent="Sell10Buttons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell 10"

[node name="Sell10Copper" type="Button" parent="Sell10Buttons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell 10"

[node name="Sell10Iron" type="Button" parent="Sell10Buttons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell 10"

[node name="Sell10Gold" type="Button" parent="Sell10Buttons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell 10"

[node name="Sell10Zinc" type="Button" parent="Sell10Buttons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell 10"

[node name="Sell10Emerald" type="Button" parent="Sell10Buttons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell 10"

[node name="Sell10Lapis" type="Button" parent="Sell10Buttons"]
layout_mode = 2
theme = ExtResource("3_yyhw1")
theme_override_font_sizes/font_size = 22
text = "Sell 10"

[node name="RocketBuilding" type="Button" parent="."]
offset_left = 267.0
offset_top = 261.0
offset_right = 552.0
offset_bottom = 305.0
theme = ExtResource("3_yyhw1")
text = "Build A Rocket -->"

[connection signal="pressed" from="RocketBuilding" to="." method="_on_rocket_building_pressed"]
